--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@
         const messages = [
 			"放慢脚步 按照你的节奏进行 用你喜欢的方式表达爱意",
             "我喜欢的就是最好的",
-            "被你的幽默风趣吸引，脑袋空闲就会想你",
+            "被你的幽默风趣吸引 脑袋空闲就会想你",
             "陪伴是最长情的告白",
-            "慢慢了解你 发现你的每一面 像在挖宝藏 不论好坏 我都喜欢"
+            "慢慢了解你 发现你的每一面 都像在挖宝藏 不论好坏 我都喜欢"
         ];
         
         // 随机选择一条祝福语
