--- a/love.html
+++ b/love.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我们的纪念日</title>
+    <title>♥⭐♥</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -363,9 +363,9 @@
                 <div class="memory-card">
                     <img src="https://images.unsplash.com/photo-1533158326339-7f3cf2404354?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="第一次旅行" class="memory-img">
                     <div class="memory-content">
-                        <h3 class="memory-title">第一次旅行</h3>
-                        <p class="memory-date">time</p>
-                        <p class="memory-desc">content</p>
+                        <h3 class="memory-title">待定</h3>
+                        <p class="memory-date"></p>
+                        <p class="memory-desc"></p>
                     </div>
                 </div>
                 
